tests/safe_struct_error.june
// error: public field is not alias-safe

struct Stats {
    age: i64
}

struct Foo {
    stats: Stats
}

fun main() {
    let foo = new safe Foo(stats: new Stats(age: 88))
}